# scripts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint-ci.yaml
src/scripts/: keepass2_csv_to_pass.py
src/scripts/types/: keepass_csv.py
